chore: simplification with toList()